# cataclysm

./: .dockerignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  Caddyfile  Dockerfile.backend  Dockerfile.frontend  Makefile  PLAN.md  PLAN_FULL.md  README.md  alembic.ini  app.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.streamlit/: config.toml
backend/: __init__.py  pyproject.toml
backend/api/: __init__.py  config.py  dependencies.py  main.py  rate_limit.py
backend/api/db/: __init__.py  database.py  models.py
backend/api/db/migrations/: env.py
backend/api/db/migrations/versions/: 4fd348345278_add_achievement_tables.py  781e3b3a8108_merge_achievement_and_leaderboard_heads.py  8feb700a204a_add_instructor_and_organization_tables.py  a1b2c3d4e5f6_add_achievement_category_column.py  a1b2c3d4e5f6_add_session_files_table.py  a5b6c7d8e9f0_drop_shared_sessions_user_fk.py  a7b8c9d0e1f2_add_ai_comparison_text_to_share_comparison_reports.py  a7b8c9d0e1f2_add_physics_cache_table.py  b2c3d4e5f6a7_add_equipment_tables.py  b6c7d8e9f0a1_add_track_corner_configs_table.py  b9d0e1f2a3c4_add_physics_cache_table.py  c1d2e3f4a5b6_add_track_slug_to_physics_cache.py  c3d4e5f6a7b8_add_corner_leaderboard_tables.py  c7d8e9f0a1b2_add_tracks_table.py  d2e3f4a5b6c7_add_notes_table.py  d743bd316fcd_initial_schema.py  d8e9f0a1b2c3_add_track_pipeline_tables.py  e3f4a5b6c7d8_drop_notes_user_fk.py  e4f5a6b7c8d9_drop_leaderboard_opt_in_column.py  e535e52061ee_add_achievement_category_column.py  e9f0a1b2c3d4_add_check_constraints_for_categorical_columns.py  f4a5b6c7d8e9_add_stickies_table.py  f5a9c2b7d301_add_corner_record_brake_consistency.py  f6b7c8d9e0a1_add_equipment_profile_is_default.py  g7c8d9e0f1a2_fix_corner_type_check_constraint.py  h8d9e0f1a2b3_merge_heads_fix_corner_type.py  i9e0f1a2b3c4_fix_character_check_constraint.py  j0f1a2b3c4d5_add_llm_usage_events_table.py  k1a2b3c4d5e6_add_runtime_settings_table.py  l2b3c4d5e6f7_add_llm_task_routes_table.py  m3c4d5e6f7a8_add_lap_tags_table.py  n4d5e6f7a8b9_add_coaching_feedback_table.py  p6f7a8b9c0d1_add_corner_capability_factors_table.py
backend/api/routers/: __init__.py  achievements.py  admin.py  analysis.py  auth.py  coaching.py  equipment.py  instructor.py  leaderboards.py  notes.py  organizations.py  progress.py  sessions.py  sharing.py  stickies.py  track_admin.py  tracks.py  trends.py  wrapped.py
backend/api/schemas/: __init__.py  achievement.py  analysis.py  coaching.py  comparison.py  equipment.py  instructor.py  leaderboard.py  notes.py  organization.py  progress.py  session.py  sharing.py  stickies.py  track_guide.py  trends.py  user.py  wrapped.py
backend/api/services/: __init__.py  achievement_engine.py  activity_tracker.py  anon_rate_limit.py  auto_flagging.py  coaching_store.py  comparison.py  corner_capability_store.py  db_coaching_store.py  db_physics_cache.py  db_session_store.py  demo_session.py  equipment_store.py  instructor_store.py  lap_tag_store.py  leaderboard_store.py  llm_usage_store.py  org_store.py  pipeline.py  runtime_settings.py  serializers.py  session_store.py  track_coaching_draft.py  track_corners.py  track_enrichment.py  track_seed.py  track_store.py  weather_backfill.py  wrapped.py
backend/tests/: __init__.py  conftest.py  test_achievement_engine.py  test_achievements_extended.py  test_achievements_integ.py  test_admin_llm_usage.py  test_ai_comparison.py  test_analysis.py  test_analysis_integ.py  test_anon_upload.py  test_auth.py  test_auth_integ.py  test_auth_router.py  test_auto_coaching.py  test_auto_flagging_extended.py  test_coaching.py  test_coaching_extended.py  test_coaching_feedback_api.py  test_coaching_feedback_db.py  test_coaching_store.py  test_comparison.py  test_comparison_extended.py  test_corner_capability_store.py  test_db_session_store.py  test_db_session_store_extended.py  test_demo_session.py  test_dependencies_integ.py  test_equipment_api.py  test_equipment_extended.py  test_equipment_router.py  test_equipment_store.py  test_health.py  test_instructor_integ.py  test_instructor_store.py  test_lap_tag_endpoint.py  test_lap_tag_store.py  test_lap_tags_coaching.py  test_lap_tags_db.py  test_lazy_rehydration.py  test_leaderboard_kings.py  (+49 more)
cataclysm/: __init__.py  banking.py  brake_markers.py  brake_pad_db.py  briefing.py  causal_chains.py  charts.py  clothoid_fitting.py  coaching.py  coaching_content_validator.py  coaching_judge.py  coaching_memory.py  coaching_validator.py  consistency.py  constants.py  copernicus_elevation.py  corner_analysis.py  corner_capability.py  corner_classifier.py  corner_enrichment.py  corner_line.py  corners.py  corners_gained.py  curvature.py  curvature_averaging.py  degradation.py  delta.py  driver_archetypes.py  driving_physics.py  elevation.py  elevation_chain.py  elevation_profile.py  elevation_service.py  engine.py  (+42 more)
(+625 files in other folders)
