[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cataclysm-backend"
version = "0.1.0"
description = "FastAPI backend for Cataclysm motorsport telemetry analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "python-multipart>=0.0.6",
    "httpx>=0.27",
    # Cataclysm core (installed from parent package)
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
    "pandas-stubs>=2.1",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy",
    "sqlalchemy.*",
    "asyncpg",
    "uvicorn",
    "scipy.*",
    "numpy",
    "numpy.*",
    "pandas",
    "pandas.*",
    "anthropic",
    "anthropic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/api/db/*",  # DB persistence deferred to Phase 2
]

[tool.coverage.report]
show_missing = true
